Wire up a manual grid search

--- a/research-proposal-presentation-01/citations.bib
+++ b/research-proposal-presentation-01/citations.bib
@@ -200,3 +200,12 @@ volume = {87},
 journal = {Signal Processing},
 doi = {10.1016/j.sigpro.2007.01.016}
 }
+
+@inproceedings{beatnsgt,
+author = {Holzapfel, Andre and Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Flexer, Arthur},
+year = {2011},
+month = {11},
+pages = {45-50},
+title = {Advantages of nonstationary gabor transforms in beat tacking},
+doi = {10.1145/2072529.2072542}
+}
